# mcge-daily-details

./: .eslintrc.cjs  .gitignore  .lintstagedrc.cjs  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.scss  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src/common/styles/: _reboot.scss  _variables.scss  global.module.scss
