[package]
name = "mcge-daily-details"
version = "0.0.1"
description = "Data analysis software developed by Rust."
authors = ["mcge <mcgeq@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thirtyfour = "0.32.0"
tokio = { version = "1.38.0", features = ["full"] }
dotenvy = "0.15.7"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
anyhow = "1.0.86"
sea-orm = { version = "0.12", features = [
  "sqlx-sqlite",
  "runtime-tokio-rustls",
  "macros",
] }
tracing-serde = "0.1.3"
tracing-appender = "0.2.3"
thiserror = "1.0.61"
